k3s/aria2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aria2-svc
  namespace: aria2

spec:
  type: NodePort
  loadBalancerIP: 192.168.30.83
  ports:
    - name: aria2-web
      port: 32380
      targetPort: http-aria2-web
    - name: aria2-rpc
      port: 32300
      nodePort: 32300
      targetPort: aria2-rpc
  selector:
    app: aria2
